--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -134,7 +134,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 *время начала окончания экскурсии указаны предварительные, они могут быть изменены в зависимости от состава группы, без изменения указанной программы! 
 </p>
 </details>
-<p>
+<p class="alert alert-success">
 В стоимость входит:
 
 транспортное обслуживание;
@@ -144,7 +144,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 обзорная экскурсия в Полтаве (3 ч);
 сопровождение. 
 /p>
-<p>
+<p class="alert alert-danger">
  В стоимость не входит:
 
 прокат лыжного снаряжения и скипасс на подъемники ;
