--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -134,22 +134,41 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 *время начала окончания экскурсии указаны предварительные, они могут быть изменены в зависимости от состава группы, без изменения указанной программы! 
 </p>
 </details>
-<p class="alert alert-success">
-В стоимость входит:
 
+<p class="alert alert-success mb-5">
+<h4 class="alert-heading">В стоимость входит:</h4>
+<ul>
+<li>
 транспортное обслуживание;
+</li>
+<li>
 проживание — 1 ночь в усадьбе ;
+</li>
+<li>
 питание: ужин и завтрак (домашняя украинская кухня);
+</li>
+<li>
 банный релакс (2 ч);
+</li>
+<li>
 обзорная экскурсия в Полтаве (3 ч);
+</li>
+<li>
 сопровождение. 
+</li>
+</ul>
 </p>
-<p class="alert alert-danger">
- В стоимость не входит:
 
+<p class="alert alert-danger mb-5">
+<h4 class="alert-heading">В стоимость не входит:</h4>
+<ul>
+<li>
 прокат лыжного снаряжения и скипасс на подъемники ;
+</li>
+<li>
 обеды в первый и во второй дни.
-
+</li>
+<ul>
              </p>
           </div>
         </div>
