--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -135,7 +135,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </p>
 </details>
 
-<p class="alert alert-success mb-5">
+<div class="alert alert-success">
 <h4 class="alert-heading">В стоимость входит:</h4>
 <ul>
 <li>
@@ -157,9 +157,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 сопровождение. 
 </li>
 </ul>
-</p>
+</div>
 
-<p class="alert alert-danger mb-5">
+<div class="alert alert-danger">
 <h4 class="alert-heading">В стоимость не входит:</h4>
 <ul>
 <li>
@@ -169,7 +169,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 обеды в первый и во второй дни.
 </li>
 <ul>
-             </p>
+             </div>
           </div>
         </div>
       </div>
