--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -137,23 +137,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <div class="alert alert-success">
 <h5 class="alert-heading">В стоимость входит:</h5>
-<ul>
-<li>
+<ul class="list-group list-group-flush">
+<li class="list-group-item">
 транспортное обслуживание;
 </li>
-<li>
+<li class="list-group-item" >
 проживание — 1 ночь в усадьбе ;
 </li>
-<li>
+<li class="list-group-item" >
 питание: ужин и завтрак (домашняя украинская кухня);
 </li>
-<li>
+<li class="list-group-item" >
 банный релакс (2 ч);
 </li>
-<li>
+<li class="list-group-item" >
 обзорная экскурсия в Полтаве (3 ч);
 </li>
-<li>
+<li class="list-group-item" >
 сопровождение. 
 </li>
 </ul>
@@ -161,11 +161,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <div class="alert alert-danger">
 <h5 class="alert-heading">В стоимость не входит:</h5>
-<ul>
-<li>
+<ul class="list-group list-group-flush>
+<li class="list-group-item" >
 прокат лыжного снаряжения и скипасс на подъемники ;
 </li>
-<li>
+<li class="list-group-item" >
 обеды в первый и во второй дни.
 </li>
 <ul>
