--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -138,22 +138,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="alert alert-success">
 <h5 class="alert-heading">В стоимость входит:</h5>
 <ul class="list-group list-group-flush">
-<li class="list-group-item">
+<li class="list-group-item list-group-item-success">
 транспортное обслуживание;
 </li>
-<li class="list-group-item" >
+<li class="list-group-item list-group-item-success " >
 проживание — 1 ночь в усадьбе ;
 </li>
-<li class="list-group-item" >
+<li class="list-group-item list-group-item-success " >
 питание: ужин и завтрак (домашняя украинская кухня);
 </li>
-<li class="list-group-item" >
+<li class="list-group-item list-group-item-success " >
 банный релакс (2 ч);
 </li>
-<li class="list-group-item" >
+<li class="list-group-item list-group-item-success " >
 обзорная экскурсия в Полтаве (3 ч);
 </li>
-<li class="list-group-item" >
+<li class="list-group-item list-group-item-success " >
 сопровождение. 
 </li>
 </ul>
@@ -162,10 +162,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="alert alert-danger">
 <h5 class="alert-heading">В стоимость не входит:</h5>
 <ul class="list-group list-group-flush>
-<li class="list-group-item" >
+<li class="list-group-item list-group-item-danger " >
 прокат лыжного снаряжения и скипасс на подъемники ;
 </li>
-<li class="list-group-item" >
+<li class="list-group-item list-group-item-danger " >
 обеды в первый и во второй дни.
 </li>
 <ul>
