--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -161,7 +161,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <div class="alert alert-danger">
 <h5 class="alert-heading">В стоимость не входит:</h5>
-<ul class="list-group list-group-flush>
+<ul class="list-group list-group-flush">
 <li class="list-group-item list-group-item-danger " >
 прокат лыжного снаряжения и скипасс на подъемники ;
 </li>
