--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -181,7 +181,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
   </div>
 </div>
-
+<script>
+$('.collapse').collapse()
+</script>
 
 <!---------$$$$$$$--------->
 
