--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -182,7 +182,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   </div>
 </div>
 <script>
-$('.collapse').collapse()
+$('#accordionExample').collapse({
+  toggle: false
+})
+
 </script>
 
 <!---------$$$$$$$--------->
