--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -134,6 +134,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 *время начала окончания экскурсии указаны предварительные, они могут быть изменены в зависимости от состава группы, без изменения указанной программы! 
 </p>
 </details>
+
 <!------------$$$$$$----------->
 
 <div class="accordion" id="accordionExample">
@@ -168,7 +169,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   </div>
 </div>
 <script>
-$('#accordionExample').collapse({
+$('#collapseOne').collapse({
   toggle: false
 })
 
