--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -320,7 +320,10 @@ $('#collapseOne').collapse({
 	</a>
 </div>
 <!-- move top -->
+<!--<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.css" rel="stylesheet"/>-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 
-	
+
 </body>
 </html>
