--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -102,12 +102,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 Присоединяйтесь к сообществу в <a href="https://invite.viber.com/?g2=AQAI6YLBmgfH7kiQ8udTUV2l%2BFIhhpFkz60dsKyAsnZiA6r%2FOtLLImR2o3mLR9Bp"> Viber Новый Поворот Запорожье</a>
             </p>
 
-<details>
-            <summary>
-              1 ДЕНЬ 
-            </summary>
-            <p>
-             13 февраля 8:00 выезд Центр города. Полная информация после оплаты брони 50%, за 3 дня до тура
+
+
+<!------------$$$$$$----------->
+
+<div class="accordion mb-5" id="accordionExample">
+  <div class="card">
+    <div class="card-header" id="headingOne">
+      <h5 class="mb-0">
+        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          1 ДЕНЬ
+        </button>
+      </h5>
+    </div>
+
+    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+      <div class="card-body">
+          13 февраля 8:00 выезд Центр города. Полная информация после оплаты брони 50%, за 3 дня до тура
 12:00-18:00   Сорочин Яр  горнолыжный комплекс, который находится всего в 14 км  от Полтавы и совсем близко от Диканьки!
 Здесь есть  четыре трассы: одна учебная для лыжников-новичков, одна — для катания на тюбах и две трассы протяженностью 300 м каждая — для катания на лыжах и сноу — доске. Состояние снежного покрова склонов поддерживается при помощи «снежных» пушек и укатывается ратраком , а два бугельных подъемника обеспечивают минимальное время  стояния в очереди  для подъема на склон. 
 Если вам надоели лыжи или борд, можно покататься на коньках или санках, заняться сноутюбингом или просто  перекусить и выпить горячий глинтвейн.
@@ -118,38 +129,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 Высокий уровень сервиса, в домах чисто и тепло, номера —  в национальном стиле, большие, уютные,  в которых есть все для комфортного проживания.
 Нас ждут гостепреимные хозяева и вкусный домашний  ужин!! Такое  чувство что приехал к любимой бабушке!!!!
 На этом вечерняя программа не заканчивается. Релакс в баньке будет отличным продолжением! А после можно будет завершить  вечер задушевными посиделками возле камина!!!!
-            </p>
-</details>
-<details>
-<summary>
-            2 ДЕНЬ 
-</summary>
-             <p>
-              После того, как хорошенько выспимся и подкрепимся завтраком — можно будет совершить мини  экскурсию по территории усадьбы, устроить фотосессию, поваляться на сеновале, осмотреть коллекцию предметов  быта 19-нач. 20 века и целое собрание  старинных вышивок.
-После 11 часов выезжаем в Полтаву. 
-Обзорная  пешеходно автобусная  экскурсия по Полтаве:  Каштановая аллея, Круглая площадь, Корпусный сад, дом малороссийского губернатора, дом дворянского собрания, памятник погибшим украинским казакам, смотровая площадка «Белая беседка», памятник Петру , Спасская церковь, Соборная площадь с колокольней Успенского собора, Иванова гора, памятник Полтавской галушке. Посещение Крестовоздвиженского монастыря.
- 
-После обзорной экскурсии переезжаем в центр, где можно будет немного пройтись, выпить кофе, продегустировать местные галушки, зайти в супермаркет….
-Выезд в 17:00. В Запорожье ориентировочно приезжаем в 21:00. 
-*время начала окончания экскурсии указаны предварительные, они могут быть изменены в зависимости от состава группы, без изменения указанной программы! 
-</p>
-</details>
-
-<!------------$$$$$$----------->
-
-<div class="accordion" id="accordionExample">
-  <div class="card">
-    <div class="card-header" id="headingOne">
-      <h5 class="mb-0">
-        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Разворачиваемая панель #1
-        </button>
-      </h5>
-    </div>
-
-    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-      <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+           
       </div>
     </div>
   </div>
@@ -157,13 +137,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="card-header" id="headingTwo">
       <h5 class="mb-0">
         <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Разворачиваемая панель #2
+          2 ДЕНЬ
         </button>
       </h5>
     </div>
     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
       <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+    После того, как хорошенько выспимся и подкрепимся завтраком — можно будет совершить мини  экскурсию по территории усадьбы, устроить фотосессию, поваляться на сеновале, осмотреть коллекцию предметов  быта 19-нач. 20 века и целое собрание  старинных вышивок.
+После 11 часов выезжаем в Полтаву. 
+Обзорная  пешеходно автобусная  экскурсия по Полтаве:  Каштановая аллея, Круглая площадь, Корпусный сад, дом малороссийского губернатора, дом дворянского собрания, памятник погибшим украинским казакам, смотровая площадка «Белая беседка», памятник Петру , Спасская церковь, Соборная площадь с колокольней Успенского собора, Иванова гора, памятник Полтавской галушке. Посещение Крестовоздвиженского монастыря.
+ 
+После обзорной экскурсии переезжаем в центр, где можно будет немного пройтись, выпить кофе, продегустировать местные галушки, зайти в супермаркет….
+Выезд в 17:00. В Запорожье ориентировочно приезжаем в 21:00. 
+*время начала окончания экскурсии указаны предварительные, они могут быть изменены в зависимости от состава группы, без изменения указанной программы! 
+
+        
+
       </div>
     </div>
   </div>
