--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -116,7 +116,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       </h5>
     </div>
 
-    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
       <div class="card-body">
           13 февраля 8:00 выезд Центр города. Полная информация после оплаты брони 50%, за 3 дня до тура
 12:00-18:00   Сорочин Яр  горнолыжный комплекс, который находится всего в 14 км  от Полтавы и совсем близко от Диканьки!
