--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -106,7 +106,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <!------------$$$$$$----------->
 
-<div class="accordion mb-5" id="accordionExample">
+<div class="accordion mt-5" id="accordionExample">
   <div class="card">
     <div class="card-header" id="headingOne">
       <h5 class="mb-0">
@@ -158,12 +158,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   </div>
 </div>
 <!--
-<script>
-$('#collapseOne').collapse({
-  toggle: false
-})
 
-</script>
 -->
 <!---------$$$$$$$--------->
 
