--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -103,10 +103,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </p>
 
 
-
 <!------------$$$$$$----------->
 
-<div class="accordion m-1" id="accordionExample">
+<div class="accordion mt-5 mb-5" id="accordionExample">
   <div class="card">
     <div class="card-header" id="headingOne">
       <h5 class="mb-0">
@@ -157,9 +156,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
   </div>
 </div>
-<!--
 
--->
 <!---------$$$$$$$--------->
 
 
