--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -92,7 +92,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </p>
             <hr>
             <p>
-              Стоимость: 1700 грн. 2 дня
+               <span class="fa fa-tags"></span>
+              <span>Стоимость: 1700 грн. 2 дня</span>
             </p>
             <br>
             <p>
