--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -35,6 +35,37 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
            h3.title {
               font-size: 61px;
            }
+           @media(max-width:1080px){
+                h3.title {
+                    font-size: 58px;
+                }
+           }
+           @media(max-width:900px){
+                h3.title {
+                    font-size: 52px;
+                }
+           }
+           @media(max-width:768px){
+                h3.title {
+                    font-size: 48px;
+                }
+           }
+           @media(max-width:667px){
+                h3.title {
+                    font-size: 44px;
+                }
+           }
+           @media(max-width:600px){
+                h3.title {
+                    font-size: 40px;
+                }
+           }
+           @media(max-width:568px){
+                h3.title {
+                    font-size: 37px;
+                    letter-spacing: 2px;
+                }
+           }
         </style>
 </head>
 <body>
