--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -66,6 +66,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     letter-spacing: 2px;
                 }
            }
+           @media(max-width:440px){
+                h3.title {
+                    font-size: 35px;
+                }
+           }
+           @media(max-width:375px){
+                h3.title {
+                    font-size: 33px;
+                }
+           }
+           @media(max-width:320px){
+                h3.title {
+                    font-size: 33px;
+                    letter-spacing: 1px;
+                }
+           }
         </style>
 </head>
 <body>
