--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -152,8 +152,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </p>
           <p>
              Бронирование билетов осуществляется заранее, обращаться:  
-            
-            <ul class="social_section_1info">
+          </p>
+            <ul class="social_section_1info mt-3 mb-3">
 		<li class="mb-2 facebook"><a href="https://www.facebook.com/groups/novipovorot/"><span class="fa fa-facebook"></span></a></li>
 		<li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><span class="fa fa-instagram"></span></a></li>
 		<li class="viber">
@@ -169,7 +169,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</li>
 		<li class="telegram"><a href="tg://resolve?domain=Dovgal_YV"><span class="fa fa-paper-plane"></span></a></li>
             </ul>
-           </p>
+           
 
 <!------------$$$$$$----------->
 
