--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -144,8 +144,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <hr>
             <p>
                <span class="fa fa-tags"></span>
-              <span>Стоимость: 1700 грн. 2 дня</span>
+              Стоимость: <span>1700грн.</span>
             </p>
+             <ul class="listing">
+		<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li> 
+	     </ul>
             <br>
             <p>
               Не забудь своих друзей, в большой компании всегда веселей!
