--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -123,7 +123,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="row">
 
         <div class="col-lg-4 main-title-text">
-          <h3 class="title">Полтава из Запорожья</h3>
+          <h3 class="title">Полтава</h3>
         </div>
         <div class="col-lg-8 blog-left-sub">
           <img src="images/Poltava-max.jpg" alt="news image" class="img-fluid">
@@ -136,7 +136,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </ul>
             </div>
             <h4 class="mb-3">
-              Лыжные покатухи и колоритный хутор с Новым поворотом 
+              Лыжные покатухи и колоритный хутор в Полтаве
             </h4>
             <p>
               Колоритный Полтавский хутор с национальной едой и банькой, покатухи на лыжах, коньках и сноубордах в самом продвинутом горонолыжном комплексе с собственными снежными пушками. Экскурсия по Полтаве и просто душевный отдых! 
