--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -142,10 +142,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               Колоритный Полтавский хутор с национальной едой и банькой, покатухи на лыжах, коньках и сноубордах в самом продвинутом горонолыжном комплексе с собственными снежными пушками. Экскурсия по Полтаве и просто душевный отдых! 
             </p>
             <hr>
-            <p>
+            <ul class="listing">
+		<li><span class="fa fa-tags"></span>Стоимость: <span>1700грн.</span></li> 
+	     </ul>
+            <!--<p>
                <span class="fa fa-tags"></span>
-              Стоимость: <span>1700грн.</span>
-            </p>
+              
+            </p>-->
              <ul class="listing">
 		<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li> 
 	     </ul>
