--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -144,12 +144,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <hr>
             <ul class="listing">
 		<li><span class="fa fa-tags"></span>Стоимость: <span>1700грн.</span></li> 
-	     </ul>
-            <!--<p>
-               <span class="fa fa-tags"></span>
-              
-            </p>-->
-             <ul class="listing">
+	   <!-- </ul>
+             <ul class="listing">-->
 		<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li> 
 	     </ul>
             <br>
