--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -143,7 +143,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </p>
             <hr>
             <ul class="listing">
-		<li><span class="fa fa-tags"></span>Стоимость: <span> 1700грн.</span></li> 
+		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span> 1700грн.</span></li> 
 	   <!-- </ul>
              <ul class="listing">-->
 		<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li> 
@@ -187,7 +187,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
     <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
       <div class="card-body">
-          13 февраля 8:00 выезд Центр города. Полная информация после оплаты брони 50%, за 3 дня до тура
+          <p>13 февраля 8:00 выезд Центр города. Полная информация после оплаты брони 50%, за 3 дня до тура
 12:00-18:00   Сорочин Яр  горнолыжный комплекс, который находится всего в 14 км  от Полтавы и совсем близко от Диканьки!
 Здесь есть  четыре трассы: одна учебная для лыжников-новичков, одна — для катания на тюбах и две трассы протяженностью 300 м каждая — для катания на лыжах и сноу — доске. Состояние снежного покрова склонов поддерживается при помощи «снежных» пушек и укатывается ратраком , а два бугельных подъемника обеспечивают минимальное время  стояния в очереди  для подъема на склон. 
 Если вам надоели лыжи или борд, можно покататься на коньках или санках, заняться сноутюбингом или просто  перекусить и выпить горячий глинтвейн.
@@ -198,7 +198,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 Высокий уровень сервиса, в домах чисто и тепло, номера —  в национальном стиле, большие, уютные,  в которых есть все для комфортного проживания.
 Нас ждут гостепреимные хозяева и вкусный домашний  ужин!! Такое  чувство что приехал к любимой бабушке!!!!
 На этом вечерняя программа не заканчивается. Релакс в баньке будет отличным продолжением! А после можно будет завершить  вечер задушевными посиделками возле камина!!!!
-           
+          </p> 
       </div>
     </div>
   </div>
@@ -212,16 +212,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
       <div class="card-body">
-    После того, как хорошенько выспимся и подкрепимся завтраком — можно будет совершить мини  экскурсию по территории усадьбы, устроить фотосессию, поваляться на сеновале, осмотреть коллекцию предметов  быта 19-нач. 20 века и целое собрание  старинных вышивок.
+       <p>  После того, как хорошенько выспимся и подкрепимся завтраком — можно будет совершить мини  экскурсию по территории усадьбы, устроить фотосессию, поваляться на сеновале, осмотреть коллекцию предметов  быта 19-нач. 20 века и целое собрание  старинных вышивок.
 После 11 часов выезжаем в Полтаву. 
 Обзорная  пешеходно автобусная  экскурсия по Полтаве:  Каштановая аллея, Круглая площадь, Корпусный сад, дом малороссийского губернатора, дом дворянского собрания, памятник погибшим украинским казакам, смотровая площадка «Белая беседка», памятник Петру , Спасская церковь, Соборная площадь с колокольней Успенского собора, Иванова гора, памятник Полтавской галушке. Посещение Крестовоздвиженского монастыря.
  
 После обзорной экскурсии переезжаем в центр, где можно будет немного пройтись, выпить кофе, продегустировать местные галушки, зайти в супермаркет….
 Выезд в 17:00. В Запорожье ориентировочно приезжаем в 21:00. 
 *время начала окончания экскурсии указаны предварительные, они могут быть изменены в зависимости от состава группы, без изменения указанной программы! 
-
-        
-
+        </p>   
       </div>
     </div>
   </div>
