--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -187,17 +187,33 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
     <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
       <div class="card-body">
-          <p>13 февраля 8:00 выезд Центр города. Полная информация после оплаты брони 50%, за 3 дня до тура
-12:00-18:00   Сорочин Яр  горнолыжный комплекс, который находится всего в 14 км  от Полтавы и совсем близко от Диканьки!
-Здесь есть  четыре трассы: одна учебная для лыжников-новичков, одна — для катания на тюбах и две трассы протяженностью 300 м каждая — для катания на лыжах и сноу — доске. Состояние снежного покрова склонов поддерживается при помощи «снежных» пушек и укатывается ратраком , а два бугельных подъемника обеспечивают минимальное время  стояния в очереди  для подъема на склон. 
+          <p><b>13 февраля, 8:00</b> выезд из Центра города. Полная информация после оплаты брони 50%.<br/> За 3 дня до тура
+<b>12:00-18:00 <b/>  <u>Сорочин Яр<u/> горнолыжный комплекс, который находится всего в <b>14 км <b/> от Полтавы и совсем близко от Диканьки!
+Здесь есть  четыре трассы: 
+<ul>
+<li>
+ учебная для лыжников-новичков;
+</li>
+<li>
+ для катания на тюбах;
+</li>
+<li>
+ и две трассы протяженностью <b>300 м </b>каждая — для
+ катания на лыжах и сноу — доске.
+</li>
+</ul>
+ Состояние снежного покрова склонов поддерживается при помощи «снежных» пушек и укатывается ратраком, 
+а два бугельных подъемника обеспечивают минимальное время 
+ стояния в очереди  для подъема на склон. <br>
 Если вам надоели лыжи или борд, можно покататься на коньках или санках, заняться сноутюбингом или просто  перекусить и выпить горячий глинтвейн.
-При желании — можно что -нибудь самим  приготовить! С пылу, с жару и с горячих углей! Грильзона находится на  открытой терассе, где есть столики , музыка и обзор на все Трассы и горки!
+При желании — можно что-нибудь самим  приготовить! С пылу, с жару и с горячих углей! Грильзона находится на  открытой терассе, где есть столики,
+ музыка и обзор на все Трассы и горки!<br>
 Или посетить местную пицерию — «Фанера» : молодежная атмосфера, необычный интерьер, вкусная  фирменная пицца под бокал вкусного разливного пива!
-Переезжаем на поселение в колоритную «Веселу садибу» (в 5 км от комплекса).
-18:15 Гостевой дом «Весела садыба»  — потрясающий семейный отель, красиво оформленный под украинский  хутор.
-Высокий уровень сервиса, в домах чисто и тепло, номера —  в национальном стиле, большие, уютные,  в которых есть все для комфортного проживания.
-Нас ждут гостепреимные хозяева и вкусный домашний  ужин!! Такое  чувство что приехал к любимой бабушке!!!!
-На этом вечерняя программа не заканчивается. Релакс в баньке будет отличным продолжением! А после можно будет завершить  вечер задушевными посиделками возле камина!!!!
+Переезжаем на поселение в колоритную «Веселу садибу» (в 5 км от комплекса).<br/>
+<b>18:15</b> <u>Гостевой дом «Весела садыба»</u> — потрясающий семейный отель, красиво оформленный под украинский  хутор.
+Высокий уровень сервиса, в домах чисто и тепло, номера —  в национальном стиле, большие, уютные, в которых есть все для комфортного проживания.
+Нас ждут гостепреимные хозяева и вкусный домашний  ужин! Такое  чувство, что приехал к любимой бабушке!<br>
+На этом вечерняя программа не заканчивается. Релакс в баньке будет отличным продолжением! А после можно будет завершить  вечер задушевными посиделками возле камина!
           </p> 
       </div>
     </div>
@@ -212,13 +228,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
       <div class="card-body">
-       <p>  После того, как хорошенько выспимся и подкрепимся завтраком — можно будет совершить мини  экскурсию по территории усадьбы, устроить фотосессию, поваляться на сеновале, осмотреть коллекцию предметов  быта 19-нач. 20 века и целое собрание  старинных вышивок.
-После 11 часов выезжаем в Полтаву. 
+       <p>  После того, как хорошенько выспимся и подкрепимся завтраком — можно будет совершить мини  экскурсию по территории усадьбы, устроить фотосессию, поваляться на сеновале, осмотреть коллекцию предметов  быта XIX - начала XX века и целое собрание  старинных вышивок.
+После <b>11 часов</b> выезжаем в Полтаву. 
 Обзорная  пешеходно автобусная  экскурсия по Полтаве:  Каштановая аллея, Круглая площадь, Корпусный сад, дом малороссийского губернатора, дом дворянского собрания, памятник погибшим украинским казакам, смотровая площадка «Белая беседка», памятник Петру , Спасская церковь, Соборная площадь с колокольней Успенского собора, Иванова гора, памятник Полтавской галушке. Посещение Крестовоздвиженского монастыря.
- 
-После обзорной экскурсии переезжаем в центр, где можно будет немного пройтись, выпить кофе, продегустировать местные галушки, зайти в супермаркет….
-Выезд в 17:00. В Запорожье ориентировочно приезжаем в 21:00. 
-*время начала окончания экскурсии указаны предварительные, они могут быть изменены в зависимости от состава группы, без изменения указанной программы! 
+ <br/>
+После обзорной экскурсии переезжаем в центр, где можно будет немного пройтись, выпить кофе, продегустировать местные галушки, зайти в супермаркет…<br/>
+Выезд в <b>17:00</b>. В Запорожье ориентировочно приезжаем в <b>21:00<b/>. <br/>
+*время начала и окончания экскурсии указаны предварительные, они могут быть изменены в зависимости от состава группы, без изменения указанной программы! 
         </p>   
       </div>
     </div>
