--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -188,7 +188,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
       <div class="card-body">
           <p><b>13 февраля, 8:00</b> выезд из Центра города. Полная информация после оплаты брони 50%.<br/> За 3 дня до тура
-<b>12:00-18:00 <b/>  <u>Сорочин Яр<u/> горнолыжный комплекс, который находится всего в <b>14 км </b> от Полтавы и совсем близко от Диканьки!
+<b>12:00-18:00 <b/>  <u>Сорочин Яр</u> горнолыжный комплекс, который находится всего в <b>14 км </b> от Полтавы и совсем близко от Диканьки!
 Здесь есть  четыре трассы: 
 <ul>
 <li>
