--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -189,20 +189,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="card-body">
           <p><b>13 февраля, 8:00</b> выезд из Центра города. Полная информация после оплаты брони 50%.<br/> За 3 дня до тура
 <b>12:00-18:00 </b>  <u>Сорочин Яр</u> горнолыжный комплекс, который находится всего в <b>14 км </b> от Полтавы и совсем близко от Диканьки!
-Здесь есть  четыре трассы: 
+Здесь есть  четыре трассы: </p>
 <ul>
 <li>
- учебная для лыжников-новичков;
+ <p>учебная для лыжников-новичков;</p>
 </li>
 <li>
- для катания на тюбах;
+ <p>для катания на тюбах;</p>
 </li>
 <li>
- и две трассы протяженностью <b>300 м </b>каждая — для
- катания на лыжах и сноу — доске.
+<p> и две трассы протяженностью <b>300 м </b>каждая — для
+ катания на лыжах и сноу — доске.</p>
 </li>
 </ul>
- Состояние снежного покрова склонов поддерживается при помощи «снежных» пушек и укатывается ратраком, 
+ <p>Состояние снежного покрова склонов поддерживается при помощи «снежных» пушек и укатывается ратраком, 
 а два бугельных подъемника обеспечивают минимальное время 
  стояния в очереди  для подъема на склон. <br>
 Если вам надоели лыжи или борд, можно покататься на коньках или санках, заняться сноутюбингом или просто  перекусить и выпить горячий глинтвейн.
@@ -233,8 +233,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 Обзорная  пешеходно автобусная  экскурсия по Полтаве:  Каштановая аллея, Круглая площадь, Корпусный сад, дом малороссийского губернатора, дом дворянского собрания, памятник погибшим украинским казакам, смотровая площадка «Белая беседка», памятник Петру , Спасская церковь, Соборная площадь с колокольней Успенского собора, Иванова гора, памятник Полтавской галушке. Посещение Крестовоздвиженского монастыря.
  <br/>
 После обзорной экскурсии переезжаем в центр, где можно будет немного пройтись, выпить кофе, продегустировать местные галушки, зайти в супермаркет…<br/>
-Выезд в <b>17:00</b>. В Запорожье ориентировочно приезжаем в <b>21:00<b/>. <br/>
-*время начала и окончания экскурсии указаны предварительные, они могут быть изменены в зависимости от состава группы, без изменения указанной программы! 
+Выезд в <b>17:00</b>. В Запорожье ориентировочно приезжаем в <b>21:00</b>. <br/>
+<i>*время начала и окончания экскурсии указаны предварительные, они могут быть изменены в зависимости от состава группы, без изменения указанной программы! </i>
         </p>   
       </div>
     </div>
