--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -32,6 +32,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<link href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 	<!-- //google fonts -->
 	<style>
+           .txt-alg-jf {
+              text-align: justify;
+              text-indent: 1.5em;
+           }
+
            h3.title {
               font-size: 61px;
            }
@@ -186,7 +191,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
 
     <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-      <div class="card-body">
+      <div class="card-body txt-alg-jf">
           <p><b>13 февраля, 8:00</b> выезд из Центра города. Полная информация после оплаты брони 50%.<br/> За 3 дня до тура
 <b>12:00-18:00 </b>  <u>Сорочин Яр</u> горнолыжный комплекс, который находится всего в <b>14 км </b> от Полтавы и совсем близко от Диканьки!
 Здесь есть  четыре трассы: </p>
@@ -227,7 +232,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       </h5>
     </div>
     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-      <div class="card-body">
+      <div class="card-body txt-alg-jf">
        <p>  После того, как хорошенько выспимся и подкрепимся завтраком — можно будет совершить мини  экскурсию по территории усадьбы, устроить фотосессию, поваляться на сеновале, осмотреть коллекцию предметов  быта XIX - начала XX века и целое собрание  старинных вышивок.
 После <b>11 часов</b> выезжаем в Полтаву. 
 Обзорная  пешеходно автобусная  экскурсия по Полтаве:  Каштановая аллея, Круглая площадь, Корпусный сад, дом малороссийского губернатора, дом дворянского собрания, памятник погибшим украинским казакам, смотровая площадка «Белая беседка», памятник Петру , Спасская церковь, Соборная площадь с колокольней Успенского собора, Иванова гора, памятник Полтавской галушке. Посещение Крестовоздвиженского монастыря.
