--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -233,14 +233,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
       <div class="card-body txt-alg-jf">
-       <p>  После того, как хорошенько выспимся и подкрепимся завтраком — можно будет совершить мини  экскурсию по территории усадьбы, устроить фотосессию, поваляться на сеновале, осмотреть коллекцию предметов  быта XIX - начала XX века и целое собрание  старинных вышивок.
+       <p>  После того, как хорошенько выспимся и подкрепимся завтраком — можно будет совершить мини 
+ экскурсию по территории усадьбы, устроить фотосессию, поваляться на сеновале, осмотреть коллекцию предметов  
+быта XIX - начала XX века и целое собрание  старинных вышивок.
 После <b>11 часов</b> выезжаем в Полтаву. 
-Обзорная  пешеходно автобусная  экскурсия по Полтаве:  Каштановая аллея, Круглая площадь, Корпусный сад, дом малороссийского губернатора, дом дворянского собрания, памятник погибшим украинским казакам, смотровая площадка «Белая беседка», памятник Петру , Спасская церковь, Соборная площадь с колокольней Успенского собора, Иванова гора, памятник Полтавской галушке. Посещение Крестовоздвиженского монастыря.
+Обзорная  пешеходно автобусная  экскурсия по Полтаве:  Каштановая аллея, Круглая площадь, Корпусный сад, дом
+ малороссийского губернатора, дом дворянского собрания, памятник погибшим украинским казакам, смотровая площадка 
+«Белая беседка», памятник Петру , Спасская церковь, Соборная площадь с колокольней Успенского собора, Иванова гора,
+ памятник Полтавской галушке. Посещение Крестовоздвиженского монастыря.</p>
  <br/>
+<p>
 После обзорной экскурсии переезжаем в центр, где можно будет немного пройтись, выпить кофе, продегустировать местные галушки, зайти в супермаркет…<br/>
-Выезд в <b>17:00</b>. В Запорожье ориентировочно приезжаем в <b>21:00</b>. <br/><br/><hr/>
-<i>*время начала и окончания экскурсии указаны предварительные, они могут быть изменены в зависимости от состава группы, без изменения указанной программы! </i>
-        </p>   
+Выезд в <b>17:00</b>. В Запорожье ориентировочно приезжаем в <b>21:00</b>. </p><br/><br/><hr/>
+<p><i>*время начала и окончания экскурсии указаны предварительные, они могут быть изменены в зависимости от состава группы, без изменения указанной программы! </i></p>
+          
       </div>
     </div>
   </div>
