--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -241,10 +241,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
  малороссийского губернатора, дом дворянского собрания, памятник погибшим украинским казакам, смотровая площадка 
 «Белая беседка», памятник Петру , Спасская церковь, Соборная площадь с колокольней Успенского собора, Иванова гора,
  памятник Полтавской галушке. Посещение Крестовоздвиженского монастыря.</p>
- <br/>
 <p>
 После обзорной экскурсии переезжаем в центр, где можно будет немного пройтись, выпить кофе, продегустировать местные галушки, зайти в супермаркет…<br/>
-Выезд в <b>17:00</b>. В Запорожье ориентировочно приезжаем в <b>21:00</b>. </p><br/><br/><hr/>
+Выезд в <b>17:00</b>. В Запорожье ориентировочно приезжаем в <b>21:00</b>. </p><br/><hr/>
 <p><i>*время начала и окончания экскурсии указаны предварительные, они могут быть изменены в зависимости от состава группы, без изменения указанной программы! </i></p>
           
       </div>
