--- a/packages.html
+++ b/packages.html
@@ -150,12 +150,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-lg-3 col-sm-6 mb-5">
 				<div class="image-tour position-relative">
-					<img src="images/Poltava-mini.jpg" alt="" class="img-fluid" />
+                                         <a href="https://novi-povorot.pp.ua/page-Poltava.html">
+					   <img src="images/Poltava-mini.jpg" alt="" class="img-fluid" />
+                                         </a>
 					<p><span class="fa fa-tags"></span> <span>1700грн.</span></p>
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Полтава, Украина.</h6>
-					<h5 class="my-2">Полтава из Запорожья</h5>
+					<h5 class="my-2"><a href="https://novi-povorot.pp.ua/page-Poltava.html">Полтава из Запорожья</a></h5>
 					<p class=""> Лыжные покатухи и колоритный хутор с Новым поворотом  </p>
 					<ul class="listing mt-3">
 						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li> 
