--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -158,7 +158,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               Не забудь своих друзей, в большой компании всегда веселей!
             </p>
           <p>
-             Бронирование билетов осуществляется заранее, обращаться:  
+             Бронирование билетов осуществляется заранеe:  <a href="https://novi-povorot.pp.ua/booking.html">забронировать</a>
           </p>
             <ul class="social_section_1info mt-3 mb-3">
 		<li class="mb-2 facebook"><a href="https://www.facebook.com/groups/novipovorot/"><span class="fa fa-facebook"></span></a></li>
