--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -160,6 +160,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <p>
              Бронирование билетов осуществляется заранеe:  <a href="https://novi-povorot.pp.ua/booking.html">забронировать</a>
           </p>
+           <p>
+             Присоединяйтесь к сообществу в социальных сетях:
+
             <ul class="social_section_1info mt-3 mb-3">
 		<li class="mb-2 facebook"><a href="https://www.facebook.com/groups/novipovorot/"><span class="fa fa-facebook"></span></a></li>
 		<li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><span class="fa fa-instagram"></span></a></li>
@@ -177,7 +180,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<li class="telegram"><a href="tg://resolve?domain=Dovgal_YV"><span class="fa fa-paper-plane"></span></a></li>
             </ul>
            
-
+           </p>
 <!------------$$$$$$----------->
 
 <div class="accordion mt-3 mb-3" id="accordionExample">
