--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -160,7 +160,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <p>
              Бронирование билетов осуществляется заранеe:  <a href="https://novi-povorot.pp.ua/booking.html">забронировать</a>
           </p>
-           <p>
+           <p style="display: inline;">
              Присоединяйтесь к сообществу в социальных сетях:
 
             <ul class="social_section_1info mt-3 mb-3">
