--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -37,6 +37,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               text-indent: 1.5em;
            }
 
+           .page-booking-btn {
+               /* */
+           }
+
            h3.title {
               font-size: 61px;
            }
@@ -158,9 +162,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               Не забудь своих друзей, в большой компании всегда веселей!
             </p>
           <p>
-             Бронирование билетов осуществляется заранеe:  <a href="https://novi-povorot.pp.ua/booking.html">забронировать</a>
-          </p>
-           <p style="display: inline-block;">
+             Бронирование билетов осуществляется заранеe: </p>
+          <div class="page-booking-btn">
+            
+              <button type="button" class="btn btn-outline-primary"> <a href="https://novi-povorot.pp.ua/booking.html">забронировать</a> </button>
+              
+          </div>
+           <p>
              Присоединяйтесь к сообществу в социальных сетях:
 
             <ul class="social_section_1info mt-3 mb-3">
