--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -37,8 +37,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               text-indent: 1.5em;
            }
 
-           .page-booking-btn {
-               /* */
+           .page-booking-btn>button>a {
+               color: white;
            }
 
            h3.title {
@@ -164,9 +164,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <p>
              Бронирование билетов осуществляется заранеe: </p>
           <div class="page-booking-btn">
-            
               <button type="button" class="btn btn-outline-primary"> <a href="https://novi-povorot.pp.ua/booking.html">забронировать</a> </button>
-              
           </div>
            <p>
              Присоединяйтесь к сообществу в социальных сетях:
