--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -37,7 +37,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               text-indent: 1.5em;
            }
 
-           .page-booking-btn>button>a {
+           .page-booking-btn>button>a:hover {
                color: white;
            }
 
