--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -37,6 +37,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               text-indent: 1.5em;
            }
 
+           .page-booking-btn>button>a {
+               color: blue;
+           }
            .page-booking-btn>button>a:hover {
                color: white;
            }
