--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -40,7 +40,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
            .page-booking-btn>button>a {
                color: blue;
            }
-           .page-booking-btn>button>a:hover {
+           .page-booking-btn>button>a:hover,
+           .page-booking-btn>button>a:active,
+           .page-booking-btn>button>a:focus {
                color: white;
            }
 
