--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -168,13 +168,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </p>
           <p>
              Бронирование билетов осуществляется заранеe: </p>
-          <div class="page-booking-btn">
+          <div class="page-booking-btn mt-1 mb-1">
               <button type="button" class="btn btn-outline-primary"> <a href="https://novi-povorot.pp.ua/booking.html">забронировать</a> </button>
           </div>
            <p>
              Присоединяйтесь к сообществу в социальных сетях:
 
-            <ul class="social_section_1info mt-3 mb-3">
+            <ul class="social_section_1info mt-1 mb-1">
 		<li class="mb-2 facebook"><a href="https://www.facebook.com/groups/novipovorot/"><span class="fa fa-facebook"></span></a></li>
 		<li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><span class="fa fa-instagram"></span></a></li>
 		<li class="viber">
