--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -145,7 +145,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="blog-date-time mb-2">
               <ul>
                 <li>
-                  13-14 Февраля 2021 
+                  <span class="fa fa-tags mr-2"><span>13-14 Февраля 2021</span>
                 </li>
               </ul>
             </div>
