--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -143,7 +143,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <img src="images/Poltava-max.jpg" alt="news image" class="img-fluid">
           <div class="blog-two-two">
             <div class="blog-date-time mb-2">
-              <ul>
+              <ul class="listing">
                 <li>
                   <span class="fa fa-calendar mr-2"><span>13-14 Февраля 2021</span>
                 </li>
