--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -228,8 +228,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 При желании — можно что-нибудь самим  приготовить! С пылу, с жару и с горячих углей! Грильзона находится на  открытой терассе, где есть столики,
  музыка и обзор на все Трассы и горки!<br>
 Или посетить местную пицерию — «Фанера» : молодежная атмосфера, необычный интерьер, вкусная  фирменная пицца под бокал вкусного разливного пива!
-Переезжаем на поселение в колоритную «Веселу садибу» (в 5 км от комплекса).<br/>
-<b>18:15</b> <u>Гостевой дом «Весела садыба»</u> — потрясающий семейный отель, красиво оформленный под украинский  хутор.
+Переезжаем на поселение в колоритную «Веселу садибу» (в 5 км от комплекса).</p>
+<p><b>18:15</b> <u>Гостевой дом «Весела садыба»</u> — потрясающий семейный отель, красиво оформленный под украинский  хутор.
 Высокий уровень сервиса, в домах чисто и тепло, номера —  в национальном стиле, большие, уютные, в которых есть все для комфортного проживания.
 Нас ждут гостепреимные хозяева и вкусный домашний  ужин! Такое  чувство, что приехал к любимой бабушке!<br>
 На этом вечерняя программа не заканчивается. Релакс в баньке будет отличным продолжением! А после можно будет завершить  вечер задушевными посиделками возле камина!
