--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -211,7 +211,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 Здесь есть  четыре трассы: </p>
 <ul>
 <li>
- <p>учебная для лыжников-новичков;</p>
+ <p>учебная для лыжников (новичков);</p>
 </li>
 <li>
  <p>для катания на тюбах;</p>
