--- a/page-Poltava.html
+++ b/page-Poltava.html
@@ -169,7 +169,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <p>
              Бронирование билетов осуществляется заранеe: </p>
           <div class="page-booking-btn mt-1 mb-1">
-              <button type="button" class="btn btn-outline-primary"> <a href="https://novi-povorot.pp.ua/booking.html">забронировать</a> </button>
+              <button type="button" class="btn btn-outline-primary"> <a href="https://novi-povorot.pp.ua/booking.html">Забронировать</a> </button>
           </div>
            <p>
              Присоединяйтесь к сообществу в социальных сетях:
