--- a/booking.html
+++ b/booking.html
@@ -109,7 +109,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                 <div class="col-md-12 form-group contact-forms">
 							<select class="form-control" id="#">
 								<option>Тур</option>
-								<option>Индия</option>
+								<option>Полтава</option>
+                                                                <option>Лимонарий</option>
 								<option>США</option>
 								<option>Франция</option>
 								<option>Турция</option>
