--- a/packages.html
+++ b/packages.html
@@ -157,7 +157,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="package-info">
 					<h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Полтава, Украина.</h6>
-					<h5 class="my-2"><a href="https://novi-povorot.pp.ua/page-Poltava.html">Полтава из Запорожья</a></h5>
+					<h5 class="my-2"><a href="https://novi-povorot.pp.ua/page-Poltava.html">Полтава</a></h5>
 					<p class=""> Лыжные покатухи и колоритный хутор с Новым поворотом  </p>
 					<ul class="listing mt-3">
 						<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li> 
