--- a/index.html
+++ b/index.html
@@ -363,7 +363,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
 				<h4 class="destination mb-3">Полтава</h4>
 				<div class="image-position position-relative">
-					<img src="images/Poltava-max.jpg" class="img-fluid" alt="">
+                                     <a href="https://novi-povorot.pp.ua/page-Poltava.html">
+					<img src="images/Poltava-max.jpg" class="img-fluid" alt="Полтава">
+                                     </a>
 					<div class="rating">
 						<ul>
 							<li><span class="fa fa-star"></span></li>
