--- a/index.html
+++ b/index.html
@@ -450,8 +450,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<h3>О нас</h3>
 				</div>
 				<div class="footer-text">
-					<p>Vivamus magna justo, laci niats eget consectetur sed, conval lis at tellus. Nulla quis lorem ipnt libero.
-					Lorem ipsum dolor.</p>
+					<p>
+                                          Присоединяйтесь к сообществу в социальных сетях:
+					</p>
 				</div>
 				<ul class="social_section_1info">
 					<li class="mb-2 facebook"><a href="https://www.facebook.com/groups/novipovorot/"><span class="fa fa-facebook"></span></a></li>
