--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -135,30 +135,44 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="row">
 
         <div class="col-lg-4 main-title-text">
-          <h3 class="title">Полтава</h3>
+          <h3 class="title">Лимонарий</h3>
         </div>
         <div class="col-lg-8 blog-left-sub">
-          <img src="images/Poltava-max.jpg" alt="news image" class="img-fluid">
+          <img src="images/2021 Лим 2550 на 2910.jpg" alt="news image" class="img-fluid">
           <div class="blog-two-two">
             <div class="blog-date-time mb-2">
               <ul class="listing mt-3">
                 <li>
-                  <span class="fa fa-calendar mr-2"></span>Дата: <span>13-14 Февраля 2021 Года</span>
+                  <span class="fa fa-calendar mr-2"></span>Дата: <span>13 Февраля 2021 Года</span>
                 </li>
               </ul>
             </div>
             <h4 class="mb-3">
-              Лыжные покатухи и колоритный хутор в Полтаве
+              Экскурсия в Лимонный сад
             </h4>
             <p>
-              Колоритный Полтавский хутор с национальной едой и банькой, покатухи на лыжах, коньках и сноубордах в самом продвинутом горонолыжном комплексе с собственными снежными пушками. Экскурсия по Полтаве и просто душевный отдых! 
+              Яркие сочные лимончики висящие на ветках,
+              интересно, экзотично и необычно ведь мы не 
+              в Сицилии или Грузии, а частном Лимонном саду
+              города Запорожья. Мы посетим удивительное место, узнаем
+              историю семьи которая растит эти чудо-лимоны, сделаем 
+              фото среди лимонных ветвей. А чтоб не грустить дома
+              без вкусностей, каждый получит <b>1 кг</b> вкуснейших
+              лимонов с собой!
             </p>
             <hr>
             <ul class="listing">
-		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>1700 Грн.</span></li> 
-	   <!-- </ul>
-             <ul class="listing">-->
-		<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li> 
+		<li><span class="fa fa-tags mr-2"></span>Стоимость: <span>230 Грн.</span></li> 
+            </ul>
+            <div class="alert alert-success">
+	       <p> В стоимость входит 1 кг лимонов с собой. 
+                  180 грн 0-12 лет (в стоимость входит 0.5 кг 
+                   лимонов с собой), цена для семей от 2 человек
+                    с детьми, стоимость указана за 1 человека.
+               </p>
+            </div>
+             <ul class="listing">
+		<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li> 
 	     </ul>
             <br>
             <p>
